--- a/src/Makefile.mac
+++ b/src/Makefile.mac
@@ -1,5 +1,6 @@
 OPT = -O3 -Wall -g
-CC = g++ $(OPT) -fopenmp -framework Accelerate 
+CC = g++ $(OPT)
+LDFLAGS = -framework Accelerate
 
 ../test.x : test.o engine.o fg_atoms.o cg_sites.o matrix_C.o matrix_M.o vector_CNv.o mapping.o neighbor.o geom.o
 	$(CC) -o ../test.x *.o $(LDFLAGS) $(LIBS)
